--- a/CodeOptimist.csproj
+++ b/CodeOptimist.csproj
@@ -5,6 +5,7 @@
 	<PropertyGroup>
 		<ProjectGuid>{D0EFED26-1507-42B2-AD67-21D28D75B8D1}</ProjectGuid>
 		<TargetFramework>net472</TargetFramework>
+		<LangVersion>9.0</LangVersion>
 		<AssemblyTitle>CodeOptimist</AssemblyTitle>
 		<Product>CodeOptimist</Product>
 		<Copyright>Copyright © 2020-$([System.DateTime]::Now.Year) Christopher Galpin</Copyright>
